--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
+<html>
 <head>
-	<title></title>
+	<title>Title</title>
 </head>
 <body>
-My site again
+
+<h1>I'm an h1</h1>
+<p id="first" class="special">Hello</p>
+<p class="special">Goodbye</p>
+<p>Hi Again</p>
+<p id = "last">Goodbye Again</p>
+
 </body>
 </html>
