--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Title</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 
@@ -11,5 +12,6 @@
 <p>Hi Again</p>
 <p id = "last">Goodbye Again</p>
 
+<script src="script.js"></script>
 </body>
 </html>
